nats-micro/tests/ui/service_missing_version.rs
use nats_micro::service;

#[service(name = "missing-version")]
struct MissingVersionService;

fn main() {}